--- a/app/src/main/res/layout/fragment_add_fav_places.xml
+++ b/app/src/main/res/layout/fragment_add_fav_places.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/addPlacesFragmentLayout"
-    tools:context=".AddFavPlacesFragment">
+    tools:context=".fragments.AddFavPlacesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_add_place"
