--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="image_border_color">#757575</color>
     <color name="item_happy_place_description_text_color">#606060</color>
 
+    <color name="detail_screen_description_text_color">#757575</color>
+
 </resources>
