--- a/app/src/main/res/layout/fragment_fav_place_detail.xml
+++ b/app/src/main/res/layout/fragment_fav_place_detail.xml
@@ -93,6 +93,16 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_location" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/testTV"
+                app:layout_constraintTop_toBottomOf="@id/btn_view_on_map"
+                android:text="This is a test TV"
+                >
+
+            </TextView>
             <!--END-->
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
