--- a/app/src/main/res/layout/fragment_main2.xml
+++ b/app/src/main/res/layout/fragment_main2.xml
@@ -45,7 +45,9 @@
         android:text="CAMERA"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_image" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_image"
+        android:clickable="false"
+        android:visibility="invisible"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_image"
