--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -74,6 +74,10 @@
     <dimen name="intro_text_size">16sp</dimen>
     <dimen name="intro_screen_sign_up_btn_marginTop">15dp</dimen>
 
+    <dimen name="add_place_select_current_location_marginTop">5dp</dimen>
+    <dimen name="add_place_select_current_location_padding">10dp</dimen>
+    <dimen name="add_place_select_current_location_textsize">16sp</dimen>
+
 
 
 </resources>
